--- a/exer0014/fundoteste.html
+++ b/exer0014/fundoteste.html
@@ -8,31 +8,37 @@
         * {
             margin: 0px;
         }
+        
         body {
+            font-family: Courier, sans-serif;
             height: 100vh;
             background-color: black;
             background-image: url(Imagens/wallpaper002.jpg);
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;
+        }
+
+        /*shorthand - background
+        color/
+
+        header {
+            padding: 10px;
+            text-align: center;
+            background-color: rgb(255, 0, 0);
+            width: 400px;
+            margin: auto;
+            border-radius: 10px 10px 0px 0px;
         }
 
         main {
-            text-align: center;
-            background-color: white;
-            width: 400px;
-            margin: auto;
             padding: 10px;
-            border-radius: 0px 0px 10px 10px;
-        }
-        header {
             text-align: center;
-            background-color: white;
-            width: 400px;
+            background-color: rgb(255, 0, 0);
+            max-width: 900px;
             margin: auto;
-            padding: 10px;
-            border-radius: 10px 10px 0px 0px;
-            margin-top: 10px;
+            border-radius:10px;
         }
     </style>
 </head>
@@ -43,6 +49,23 @@
 
     <main>
         <h1 class="titulo">Usando imagem de fundo</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas a modi porro voluptatibus doloribus, maxime libero ullam facilis maiores assumenda accusantium ea possimus soluta illo fugit quis dolor ab velit!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas a modi porro voluptatibus doloribus, maxime libero ullam facilis maiores assumenda accusantium ea possimus soluta illo fugit quis dolor ab velit!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas a modi porro voluptatibus doloribus, maxime libero ullam facilis maiores assumenda accusantium ea possimus soluta illo fugit quis dolor ab velit!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas a modi porro voluptatibus doloribus, maxime libero ullam facilis maiores assumenda accusantium ea possimus soluta illo fugit quis dolor ab velit!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas a modi porro voluptatibus doloribus, maxime libero ullam facilis maiores assumenda accusantium ea possimus soluta illo fugit quis dolor ab velit!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas a modi porro voluptatibus doloribus, maxime libero ullam facilis maiores assumenda accusantium ea possimus soluta illo fugit quis dolor ab velit!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas a modi porro voluptatibus doloribus, maxime libero ullam facilis maiores assumenda accusantium ea possimus soluta illo fugit quis dolor ab velit!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas a modi porro voluptatibus doloribus, maxime libero ullam facilis maiores assumenda accusantium ea possimus soluta illo fugit quis dolor ab velit!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas a modi porro voluptatibus doloribus, maxime libero ullam facilis maiores assumenda accusantium ea possimus soluta illo fugit quis dolor ab velit!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas a modi porro voluptatibus doloribus, maxime libero ullam facilis maiores assumenda accusantium ea possimus soluta illo fugit quis dolor ab velit!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas a modi porro voluptatibus doloribus, maxime libero ullam facilis maiores assumenda accusantium ea possimus soluta illo fugit quis dolor ab velit!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas a modi porro voluptatibus doloribus, maxime libero ullam facilis maiores assumenda accusantium ea possimus soluta illo fugit quis dolor ab velit!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas a modi porro voluptatibus doloribus, maxime libero ullam facilis maiores assumenda accusantium ea possimus soluta illo fugit quis dolor ab velit!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas a modi porro voluptatibus doloribus, maxime libero ullam facilis maiores assumenda accusantium ea possimus soluta illo fugit quis dolor ab velit!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas a modi porro voluptatibus doloribus, maxime libero ullam facilis maiores assumenda accusantium ea possimus soluta illo fugit quis dolor ab velit!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas a modi porro voluptatibus doloribus, maxime libero ullam facilis maiores assumenda accusantium ea possimus soluta illo fugit quis dolor ab velit!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas a modi porro voluptatibus doloribus, maxime libero ullam facilis maiores assumenda accusantium ea possimus soluta illo fugit quis dolor ab velit!</p>
     </main>
 </body>
 </html>
