--- a/exer0014/fundoteste.html
+++ b/exer0014/fundoteste.html
@@ -12,16 +12,13 @@
         body {
             font-family: Courier, sans-serif;
             height: 100vh;
-            background-color: black;
-            background-image: url(Imagens/wallpaper002.jpg);
-            background-position: center center;
-            background-repeat: no-repeat;
+            background: rgb(0, 0, 0) url(Imagens/wallpaper002.jpg) center center no-repeat fixed;
             background-size: cover;
-            background-attachment: fixed;
         }
 
         /*shorthand - background
-        color/
+            color > image > position > repeat > size > attachment
+        */
 
         header {
             padding: 10px;
