--- a/exer0015/index.html
+++ b/exer0015/index.html
@@ -10,21 +10,16 @@
         }
 
         table {
+            height: 400px;
             width: 400px;
             border-collapse: collapse;
-        }
-
-        tr.linha {
-            background-color: yellow;
-        }
-        
-        td.azul {
-            background-color: blue;
         }
 
         table td{
             border: 1px solid black;
             padding: 8px;
+            text-align: center; /*Alinhamento horizontal*/
+            vertical-align: top; /*Alinhamento vertical*/
         }
     </style>
 </head>
@@ -51,7 +46,7 @@
         </tr>
 
         <tr>
-            <td class="azul">A3</td> <!--TERCEIRA LINHA-->
+            <td>A3</td> <!--TERCEIRA LINHA-->
             <td>B3</td>
             <td>C3</td>
         </tr>
