--- a/exer0015/index002.html
+++ b/exer0015/index002.html
@@ -4,6 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Uso de tabelas</title>
+    <style>
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
+        table {
+            width: 600px;
+            border-collapse: collapse;
+        }
+
+        td,th{
+            border: 1px solid black;
+            padding: 10px;
+        }
+        
+        thead, tfoot {
+            background-color: gray;
+        }
+
+        td.num {
+            text-align: right;
+        }
+    </style>
 </head>
 <h1>Uso de tabelas grandes</h1>
 <body>
@@ -21,16 +44,32 @@
         <thead>
             <tr>
                 <th>Estado</th>
-                <th>Populção</th>
+                <th>População</th>
             </tr>
         </thead>
 
         <tbody>
+            <tr>
+                <td>São paulo</td>
+                <td class="num">44 411 238</td>
+            </tr>
 
+            <tr>
+                <td>Bahia</td>
+                <td class="num">14 141 626</td>
+            </tr>
+
+            <tr>
+                <td>Goiás</td>
+                <td class="num">7 056 495</td>
+            </tr>
         </tbody>
 
         <tfoot>
-
+            <tr>
+                <th>Total de habitantes</th>
+                <td class="num">00000</td>
+            </tr>
         </tfoot>
     </table>
 </body>
