--- a/exer0015/index002.html
+++ b/exer0015/index002.html
@@ -10,6 +10,7 @@
         }
 
         table {
+            position: relative;
             width: 600px;
             border-collapse: collapse;
         }
@@ -18,9 +19,19 @@
             border: 1px solid black;
             padding: 10px;
         }
-        
+
         thead, tfoot {
             background-color: gray;
+        }
+
+        thead tr th {
+            position: sticky;
+            top: -1px;
+            background-color: gray;
+        }
+        
+        tbody tr:nth-child(even) {
+            background-color:rgb(158, 157, 157) ;
         }
 
         td.num {
@@ -63,6 +74,16 @@
                 <td>Goiás</td>
                 <td class="num">7 056 495</td>
             </tr>
+
+            <tr>
+                <td>Rio de Janeiro</td>
+                <td class="num">3 908 456</td>
+            </tr>
+
+            <tr>
+                <td>Pará</td>
+                <td class="num">5 895 677</td>
+            </tr>
         </tbody>
 
         <tfoot>
@@ -72,5 +93,13 @@
             </tr>
         </tfoot>
     </table>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur asperiores vitae obcaecati odit repudiandae repellendus, modi quasi. Laboriosam quidem tenetur unde sequi dicta eius? Praesentium eaque ab sed aut magni.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur asperiores vitae obcaecati odit repudiandae repellendus, modi quasi. Laboriosam quidem tenetur unde sequi dicta eius? Praesentium eaque ab sed aut magni.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur asperiores vitae obcaecati odit repudiandae repellendus, modi quasi. Laboriosam quidem tenetur unde sequi dicta eius? Praesentium eaque ab sed aut magni.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur asperiores vitae obcaecati odit repudiandae repellendus, modi quasi. Laboriosam quidem tenetur unde sequi dicta eius? Praesentium eaque ab sed aut magni.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur asperiores vitae obcaecati odit repudiandae repellendus, modi quasi. Laboriosam quidem tenetur unde sequi dicta eius? Praesentium eaque ab sed aut magni.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur asperiores vitae obcaecati odit repudiandae repellendus, modi quasi. Laboriosam quidem tenetur unde sequi dicta eius? Praesentium eaque ab sed aut magni.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur asperiores vitae obcaecati odit repudiandae repellendus, modi quasi. Laboriosam quidem tenetur unde sequi dicta eius? Praesentium eaque ab sed aut magni.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur asperiores vitae obcaecati odit repudiandae repellendus, modi quasi. Laboriosam quidem tenetur unde sequi dicta eius? Praesentium eaque ab sed aut magni.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur asperiores vitae obcaecati odit repudiandae repellendus, modi quasi. Laboriosam quidem tenetur unde sequi dicta eius? Praesentium eaque ab sed aut magni.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur asperiores vitae obcaecati odit repudiandae repellendus, modi quasi. Laboriosam quidem tenetur unde sequi dicta eius? Praesentium eaque ab sed aut magni.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur asperiores vitae obcaecati odit repudiandae repellendus, modi quasi. Laboriosam quidem tenetur unde sequi dicta eius? Praesentium eaque ab sed aut magni.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur asperiores vitae obcaecati odit repudiandae repellendus, modi quasi. Laboriosam quidem tenetur unde sequi dicta eius? Praesentium eaque ab sed aut magni.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur asperiores vitae obcaecati odit repudiandae repellendus, modi quasi. Laboriosam quidem tenetur unde sequi dicta eius? Praesentium eaque ab sed aut magni.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur asperiores vitae obcaecati odit repudiandae repellendus, modi quasi. Laboriosam quidem tenetur unde sequi dicta eius? Praesentium eaque ab sed aut magni.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur asperiores vitae obcaecati odit repudiandae repellendus, modi quasi. Laboriosam quidem tenetur unde sequi dicta eius? Praesentium eaque ab sed aut magni.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur asperiores vitae obcaecati odit repudiandae repellendus, modi quasi. Laboriosam quidem tenetur unde sequi dicta eius? Praesentium eaque ab sed aut magni.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur asperiores vitae obcaecati odit repudiandae repellendus, modi quasi. Laboriosam quidem tenetur unde sequi dicta eius? Praesentium eaque ab sed aut magni.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur asperiores vitae obcaecati odit repudiandae repellendus, modi quasi. Laboriosam quidem tenetur unde sequi dicta eius? Praesentium eaque ab sed aut magni.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur asperiores vitae obcaecati odit repudiandae repellendus, modi quasi. Laboriosam quidem tenetur unde sequi dicta eius? Praesentium eaque ab sed aut magni.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur asperiores vitae obcaecati odit repudiandae repellendus, modi quasi. Laboriosam quidem tenetur unde sequi dicta eius? Praesentium eaque ab sed aut magni.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur asperiores vitae obcaecati odit repudiandae repellendus, modi quasi. Laboriosam quidem tenetur unde sequi dicta eius? Praesentium eaque ab sed aut magni.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur asperiores vitae obcaecati odit repudiandae repellendus, modi quasi. Laboriosam quidem tenetur unde sequi dicta eius? Praesentium eaque ab sed aut magni.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur asperiores vitae obcaecati odit repudiandae repellendus, modi quasi. Laboriosam quidem tenetur unde sequi dicta eius? Praesentium eaque ab sed aut magni.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur asperiores vitae obcaecati odit repudiandae repellendus, modi quasi. Laboriosam quidem tenetur unde sequi dicta eius? Praesentium eaque ab sed aut magni.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur asperiores vitae obcaecati odit repudiandae repellendus, modi quasi. Laboriosam quidem tenetur unde sequi dicta eius? Praesentium eaque ab sed aut magni.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur asperiores vitae obcaecati odit repudiandae repellendus, modi quasi. Laboriosam quidem tenetur unde sequi dicta eius? Praesentium eaque ab sed aut magni.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur asperiores vitae obcaecati odit repudiandae repellendus, modi quasi. Laboriosam quidem tenetur unde sequi dicta eius? Praesentium eaque ab sed aut magni.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur asperiores vitae obcaecati odit repudiandae repellendus, modi quasi. Laboriosam quidem tenetur unde sequi dicta eius? Praesentium eaque ab sed aut magni.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur asperiores vitae obcaecati odit repudiandae repellendus, modi quasi. Laboriosam quidem tenetur unde sequi dicta eius? Praesentium eaque ab sed aut magni.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur asperiores vitae obcaecati odit repudiandae repellendus, modi quasi. Laboriosam quidem tenetur unde sequi dicta eius? Praesentium eaque ab sed aut magni.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur asperiores vitae obcaecati odit repudiandae repellendus, modi quasi. Laboriosam quidem tenetur unde sequi dicta eius? Praesentium eaque ab sed aut magni.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur asperiores vitae obcaecati odit repudiandae repellendus, modi quasi. Laboriosam quidem tenetur unde sequi dicta eius? Praesentium eaque ab sed aut magni.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur asperiores vitae obcaecati odit repudiandae repellendus, modi quasi. Laboriosam quidem tenetur unde sequi dicta eius? Praesentium eaque ab sed aut magni.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur asperiores vitae obcaecati odit repudiandae repellendus, modi quasi. Laboriosam quidem tenetur unde sequi dicta eius? Praesentium eaque ab sed aut magni.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur asperiores vitae obcaecati odit repudiandae repellendus, modi quasi. Laboriosam quidem tenetur unde sequi dicta eius? Praesentium eaque ab sed aut magni.</p>  
 </body>
 </html>
