--- a/exer0017/iframe001.html
+++ b/exer0017/iframe001.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estudo de iframe</title>
+    <style>
+        iframe {
+            width: 500px;
+            height: 500px;
+        }
+    </style>
 </head>
 <body>
     <h1>Testando o uso de iframe</h1>
-    <p>acessando o site do <iframe src="https://www.youtube.com/watch?v=GWULnkTnapM&list=PLHz_AreHm4dkcVCk2Bn_fdVQ81Fkrh6WT&index=2" frameborder="1"></iframe> para aprender a programar</p>
+    <p>acessando o site do <iframe src="https://www.youtube.com/watch?v=GWULnkTnapM&list=PLHz_AreHm4dkcVCk2Bn_fdVQ81Fkrh6WT&index=2" frameborder="1" scolling="no"></iframe> para aprender a programar</p>
 
     <p>testando iframe</p>
 
